hard-gists/71152286b0a8826249fe/run.log
=== Docker Run Log for 71152286b0a8826249fe ===
Started at: Mi 29. Okt 17:00:55 CET 2025

[2025-10-29 17:00:55] START: Running container for 71152286b0a8826249fe
[2025-10-29 17:00:56] SUCCESS: Container 134e16f881476c54b80ffa1932de350ad0f1321abbccea2e38f3e6a955533f7f started for 71152286b0a8826249fe
=== Container logs for 71152286b0a8826249fe ===
  File "/snippet.py", line 25
    print "%s open %s" % (xact.date, account)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 71152286b0a8826249fe ===
[2025-10-29 17:00:58] INFO: Container 134e16f881476c54b80ffa1932de350ad0f1321abbccea2e38f3e6a955533f7f has stopped
